--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,22 @@ button:hover {
   background-color: #fff;
   color: #E08594;
 }
+
+form {
+  padding: 0 10px;
+}
+
+input {
+  border: 1px solid transparent;
+  color: #222;
+  padding: 4px 5px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  transition: border-color .4s ease-in-out;
+  display: block;
+  outline: none;
+}
+
+input:focus {
+  border-color: #E08594;
+}
